--- a/index.html
+++ b/index.html
@@ -1,11 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <script src="js/script.js"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+  </head>
+  <button
+    type="button"
+    name="dark_light"
+    onclick="toggleDarkLight()"
+    id="btntxt"
+    title="Toggle dark/light mode"
+  >
+    🌛
+  </button>
+  <header>
+    <div class="header">
+      <a href="index.html" id="logo">Mostafa Anwar</a>
+      <input type="checkbox" id="chk" />
+      <label for="chk" class="show-menu-btn">
+        <i class="fas fa-ellipsis-h"></i>
+      </label>
+      <ul class="menu">
+        <a href="index.html">Home</a>
+        <a href="#Projects">Projects</a>
+        <a href="#Contact">Contact</a>
+        <label for="chk" class="hide-menu-btn">
+          <i class="fas fa-times"></i>
+        </label>
+      </ul>
+    </div>
+    <img class="mainimg" src="img/side.jpg" alt="a picture of Mostafa Anwar" />
+  </header>
+  <body class="dark-mode" id="cls">
+    <div class="aboutMe">
+      <h2>About Me</h2>
+      <p>
+        My name is Mostafa Anwar I 'm 22 Years old. I started studying computer
+        Science at Cairo University in 2016. I have interests in technology,
+        tennis and video games. In early 2018 I won 3rd place in Emirates NBD
+        innovation program. In early 2019 I was chosen in best top 30 students
+        among arab countries to get a Front-End Nano degree and now in july 2019
+        I have finished it.
+      </p>
+    </div>
+    <br />
+    <div id="projects">
+      <hr />
+      <h2 id="Projects">projects</h2>
+      <a href="pokemon.html" target="_blank" class="project project-tile">
+        <img class="project-pic" src="img/pokemon.jpg" alt="project" />
+        <div class="project-title">Pokemon Duel</div>
+      </a>
+      
+      <a href="Doraemon.html" target="_blank" class="project project-tile">
+        <img class="project-pic" src="img/doraemon.png" alt="project" />
+        <div class="project-title">doraemon</div>
+      </a>
+      <a
+        href="feedReaderTesting.html"
+        target="_blank"
+        class="project project-tile"
+      >
+        <img
+          class="project-pic"
+          src="http://tiny.cc/feedrt"
+          alt="feed read testing project"
+        />
+        <div class="project-title">Feed reader testing</div>
+      </a>
+      <a
+        href="visitorCounter.html"
+        target="_blank"
+        class="project project-tile"
+      >
+        <img
+          class="project-pic"
+          src="https://i.gyazo.com/8fb8c8c243adfd23c0ecd9f16f12d440.png"
+          alt="visitor counter project"
+        />
+        <div class="project-title">Visitor Counter</div>
+      </a>
+      <a href="memoryGame.html" target="_blank" class="project project-tile">
+        <img
+          class="project-pic"
+          src="http://tiny.cc/mgfend"
+          alt="memory game project"
+        />
+        <div class="project-title">Memory Game</div>
+      </a>
+      <a href="za7maFinder.html" target="_blank" class="project project-tile">
+        <img
+          class="project-pic"
+          src="img/za7mafinder.jpg"
+          alt="project pic is being updated"
+        />
+        <div class="project-title">za7ma finder</div>
+      </a>
+      <a href="arcadeGame.html" target="_blank" class="project project-tile">
+        <img
+          class="project-pic"
+          src="https://miro.medium.com/max/799/1*wyq4YUbU0X93njpmDUEG0A.png"
+          alt="Classic arcade game project"
+        />
+        <div class="project-title">Classic arcade game</div>
+      </a>
+    </div>
+    <div class="contact-section">
+      <div class="inner-width">
+        <h1 id="h1Cs">Get in touch with me</h1>
+        <input type="text" id="name" class="name" placeholder="Your Name" />
+        <input type="email" id="email" class="email" placeholder="Your Email" />
+        <textarea
+          rows="1"
+          id="message"
+          placeholder="Message"
+          class="message"
+        ></textarea>
+        <a href="mailto:mostafaanwar.jabr@gmail.com">Send e-mail</a>
+      </div>
+    </div>
+    
+    <hr />
+    <footer id="Contact">
+      <div>
+        <ul class="icons">
+          <li>
+            <a href="https://codepen.io/mostafa_anwar"
+              ><span class="fab fa-codepen"></span
+            ></a>
+          </li>
+          <li>
+            <a href="https://github.com/MostafAanwar"
+              ><span class="fab fa-github"></span
+            ></a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/mostafa-anwar/"
+              ><span class="fab fa-linkedin"></span
+            ></a>
+          </li>
+        </ul>
+      </div>
+    </footer>
+  </body>
 </html>
